# HomeWork_6.2

./: .gitignore  README.md  catalog.json  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_name_alter_product_created_at_and_more.py  0003_alter_product_price.py  0004_product_in_active.py  0005_product_is_published.py  0006_alter_product_options.py  0007_product_owner.py
catalog/templates/: base.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_category.html  products_in_category.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_managers_alter_user_is_active.py
users/templates/: login.html
