[tool.poetry]
name = "homework-6-2"
version = "0.1.0"
description = ""
authors = ["Ivan_K <ikalinov1989yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
