[tool.poetry]
name = "homework-6-2"
version = "0.1.0"
description = ""
authors = ["Ivan_K <ikalinov1989yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"
ipython = "^9.2.0"
django = "4.2.2"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
